--- a/nn.html
+++ b/nn.html
@@ -13,11 +13,12 @@
 
         let nn = new NeuralNetwork(2, 2, 1);
 
-        let inputs = [1, 0, -5];
+        let inputs = [3, 1];
 
         let output = nn.feedForward(inputs);
 
-        console.log(output);
+        // console.log('OUTPUT');
+        // logData(output);
 
 
         function logData(m) {
