drop in codingtrain nn and matrix libs

--- a/nn.html
+++ b/nn.html
@@ -19,6 +19,8 @@
         // logData(output);
         nn.train(inputs, targets);
 
+        // console.log(nn.data);
+            
         function logData(m) {
             // console.log(JSON.stringify(m.matrix));
             console.table(m.data);
