--- a/examples/xor.html
+++ b/examples/xor.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/p5.js"></script>
-    <script src="lib/matrix.js"></script>
-    <script src="lib/nn.js"></script>
+    <script src="../lib/matrix.js"></script>
+    <script src="../lib/nn.js"></script>
     
     <meta charset="utf-8" />
 
